fix incorrect translation

--- a/NSDate+RelativeTime.bundle/en.lproj/NSDate+RelativeTime.strings
+++ b/NSDate+RelativeTime.bundle/en.lproj/NSDate+RelativeTime.strings
@@ -18,7 +18,7 @@
 "%d weeks ago" = "%d weeks ago";
 "%d weeks from now" = "%d weeks from now";
 "A month ago" = "A month ago";
-"A month from now" = "A month ago";
+"A month from now" = "A month from now";
 "%d months ago" = "%d months ago";
 "%d months from now" = "%d months from now";
 "A year ago" = "A year ago";
